CSS to the header was added

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,36 @@
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  font-size: 62.5%; }
+
+body {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif; }
+
+.header {
+  background-color: rgba(0, 0, 0, 0);
+  padding-bottom: 6rem; }
+  .header__title {
+    text-align: center; }
+    .header__title--primary {
+      font-family: 'Pacifico', cursive;
+      font-size: 8rem;
+      padding-bottom: 1rem; }
+    .header__title--secondary {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 2rem; }
+
+.summary {
+  text-align: center; }
+  .summary__title {
+    font-size: 3rem; }
+  .summary__budget {
+    margin: 2rem;
+    font-size: 2rem; }
+
 .row::after {
   clear: both;
   content: "";
