--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,6 @@
-@import "abstracts/variables";
+@import "base/reset";
+@import "base/variables";
+@import "layout/header";
+@import "layout/summary";
 @import "layout/grid";
 @import "components/items";
