--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,5 +2,6 @@
 @import "base/variables";
 @import "layout/header";
 @import "layout/summary";
+@import "components/addItems";
 @import "layout/grid";
 @import "components/items";
