--- a/sass/components/_addItems.scss
+++ b/sass/components/_addItems.scss
@@ -1,3 +1,22 @@
 .newItem {
+	width: 70%;
+	margin: 0 auto;
+	border: 2px solid grey;
+	padding: 2rem;
+	border-radius: 	2rem;	
+}
+
+legend {
 	display: inline;
+	width:  auto;
+}
+
+.add__btn {
+	display: block; 
+	margin: 0 auto;
+	border-radius: 	5rem;
+}
+
+.innercontent {
+	margin-bottom: 	2rem;
 }
